--- a/src/client/modules/my/app/app.html
+++ b/src/client/modules/my/app/app.html
@@ -20,7 +20,7 @@
             </p>
         </div>
         <div>
-            <a href="https://lwc.dev" class="link" target="_blank">Learn LWC</a>
+            <a href="https://lwc.dev" class="link" target="_blank">shanmugam Dream house Learn LWC</a>
         </div>
     </div>
 </template>
